<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AutoTap</string>
    <string name="accessibility_service_description">Интеллектуальная служба автоматизации кликов, жестового ввода и компьютерного зрения AutoTap Greenfield Core.</string>
    <string name="security_notice">Приложение полностью автономно и изолировано от сети Интернет.</string>
    <string name="btn_expand">Expand</string>
    <string name="btn_drag_handle">::</string>
    <string name="btn_play">Play</string>
    <string name="btn_add">Add</string>
    <string name="btn_record">Record</string>
    <string name="btn_capture">Capture</string>
    <string name="btn_toggle_menu">Toggle Menu</string>
    <string name="btn_scripts">Scripts</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_joy">JOY</string>
    <string name="btn_lock">LOCK</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_hide_numbers">Hide Numbers</string>
    <string name="btn_help">Help</string>
    <string name="btn_close">Close</string>
    <string name="app_title">AUTOTAP</string>
    <string name="app_version_tag">v34.9 Precision</string>
    <string name="btn_security">БЕЗОПАСНОСТЬ</string>
    <string name="main_switch_desc">Главный переключатель пульта</string>
    <string name="tap_to_launch_hint">Нажмите для запуска пульта</string>
    <string name="system_services_header">СИСТЕМНЫЕ СЛУЖБЫ</string>
    <string name="badge_tap">TAP</string>
    <string name="service_clicker_title">Служба кликера</string>
    <string name="service_clicker_desc">Выполнение жестов</string>
    <string name="btn_turn_on">ВКЛЮЧИТЬ</string>
    <string name="badge_hud">HUD</string>
    <string name="overlay_window_title">Оверлей поверх окон</string>
    <string name="overlay_window_desc">Плавающий пульт</string>
    <string name="badge_60f">60F</string>
    <string name="screen_capture_title">Захват экрана 60 FPS</string>
    <string name="screen_capture_desc">Direct Stream проекция</string>
    <string name="btn_start">СТАРТ</string>
    <string name="nav_main">ГЛАВНАЯ</string>
    <string name="nav_scenarios">СЦЕНАРИИ</string>
    <string name="nav_log">ЖУРНАЛ</string>
    <string name="title_add_action">Добавить действие</string>
    <string name="action_single_click">Одиночный клик</string>
    <string name="action_swipe">Прямой свайп</string>
    <string name="action_template_search">ИИ-поиск шаблона</string>
    <string name="action_text_color">Текст / Цвет / Вызов</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_ok">OK</string>
    <string name="title_global_settings">Глобальные настройки</string>
    <string name="label_click_duration">Длительность клика (мс):</string>
    <string name="label_swipe_duration">Длительность свайпа (мс):</string>
    <string name="hint_click_duration">50</string>
    <string name="hint_swipe_duration">300</string>
    <string name="title_script_manager">Менеджер сценариев</string>
    <string name="hint_script_name">Имя нового сценария</string>
    <string name="btn_save_targets">Сохранить текущие мишени</string>
    <string name="btn_move_frame">ДВИГАТЬ</string>
    <string name="btn_resize_frame">РАЗМЕР</string>
    <string name="action_tap_short">Клик</string>
    <string name="action_hold">Зажатие</string>
    <string name="action_swipe_short">Свайп</string>
    <string name="action_ai">ИИ</string>
    <string name="action_ocr">OCR</string>
    <string name="label_pause_sec">Пауза (сек)</string>
    <string name="label_repeats">Повторы</string>
    <string name="label_duration_ms">Длительность зажатия/свайпа (мс)</string>
    <string name="label_ai_timeout">ИИ Таймаут (сек)</string>
    <string name="btn_all">Все</string>
    <string name="btn_reset">Сброс</string>
    <string name="btn_calibrate_mask">Калибровка маски</string>
    <string name="hint_text_or_hex">Текст или HEX цвет</string>
    <string name="label_jump_success">Прыжок при успехе (шаг №)</string>
    <string name="label_jump_timeout">Прыжок при таймауте (шаг №)</string>
    <string name="btn_clone">Клон</string>
    <string name="btn_delete">Удалить</string>
    <string name="title_joystick">ДЖОЙСТИК</string>
    <string name="btn_record_action">ЗАПИСАТЬ</string>
    <string name="label_zip">ZIP</string>
    <string name="desc_prev">Назад</string>
    <string name="desc_next">Вперед</string>
    <string name="desc_copy">Копировать</string>
    <string name="desc_save">Сохранить</string>
    <string name="desc_trash">Удалить</string>
    <string name="symbol_prev">&lt;</string>
    <string name="symbol_next">&gt;</string>
    <!-- RuStore Pay SDK Configuration -->
    <string name="console_app_id">2063548</string>
    <string name="sdk_pay_scheme">rustorepay2063548</string>
    <string name="restricted_settings_menu_title">Разрешить запрещенные\nнастройки</string>
    <string name="restricted_settings_menu_desc">Для Android 13+ (требуется при первом включении)</string>
    <string name="btn_restricted_settings">ИНСТРУКЦИЯ</string>
</resources>
