<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/tvScriptName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="#F0F6FC"
        android:textSize="13sp" />

    <Button
        android:id="@+id/btnExportScriptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_zip" />

    <Button
        android:id="@+id/btnCopyScriptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" android:contentDescription="@string/desc_copy" />

    <Button
        android:id="@+id/btnDeleteScriptFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" android:contentDescription="@string/desc_trash" />
</LinearLayout>
